# clin-nlp-metrics

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: linting.yml
docs/: conf.py  index.rst
src/clin-nlp-metrics/: metrics.py
src/clin_nlp_metrics/: __init__.py  dataset.py  metrics.py
tests/: conftest.py  test_dataset.py  test_metrics.py
tests/data/: clinlp_docs.pickle  medcattrainer_export.json
