[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clin-nlp-metrics"
version = "0.1.2"
authors = [
  { name="Richard Bartels", email="r.t.bartels-6@umcutrecht.nl" },
]
description = "Evaluate NLP methods for clinical use"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["spacy~=3.0", "clinlp>=0.6"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
dev = ["black", "flake8", "flake8-pyproject", "isort"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ['E203']
